<resources>
    <string name="app_name">Popular Movies</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_detail">Details</string>
    <string name="subtitle_detail_plot_synopsis">Plot Synopsis:</string>
    <string name="subtitle_detail_rating">Rating:</string>
    <string name="subtitle_detail_release_date">Release Date:</string>

    <!-- Strings related to Menus -->
    <string name="action_settings">Settings</string>
    <string name="action_sort">Sort</string>
    <string name="action_share">Share</string>
    <string name="action_add_favorite">Add to favorite</string>
    <string name="action_remove_favorite">Remove from favorite</string>

    !-- Strings related to App Animations -->
    <string name="shared_element_transition">shared_element_transition</string>

    <!-- Strings related to Sorting method to the hidden ListPreference -->
    <string name="pref_sort_title">Sort</string>
    <string name="pref_sort_key">sort</string>
    <string name="pref_sort_default_value">popular</string>

    <!-- Strings related to Image content description -->
    <string name="image_description_backdrop">The backdrop of the movie</string>
    <string name="image_description_poster">The poster of the movie</string>
    <string name="image_description_play">Play trailer</string>
    <string name="trailers_textview">Trailers</string>
    <string name="reviews_textview">Reviews</string>
    <string name="no_movie_selected">No movie selected</string>

</resources>