<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.alexgaba.popularmovies.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_backdrop_height"
                android:background="@color/colorImageBackground"
                android:scaleType="centerCrop"
                android:id="@+id/detail_backdrop_imageview">

            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true">
                <ImageView
                    android:layout_width="@dimen/detail_poster_width"
                    android:layout_height="@dimen/detail_poster_height"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:scaleType="fitXY"
                    android:background="@color/colorImageBackground"
                    android:id="@+id/detail_poster_imageview" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_spacing"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="Popular Movie Title"
                    android:textSize="@dimen/detail_title_text_size"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/colorTitle"
                    android:id="@+id/detail_title_textview"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_detail_plot_synopsis"
                android:textSize="@dimen/detail_subtitle_text_size"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_horizontal_spacing"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/detail_plot_textview"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_horizontal_spacing"
                android:textColor="@color/colorDescription"
                android:text="Plot description"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_horizontal_spacing">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle_detail_rating"
                    android:textSize="@dimen/detail_subtitle_text_size"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detail_rating_textview"
                    android:paddingLeft="@dimen/activity_vertical_spacing"
                    android:paddingRight="@dimen/activity_vertical_spacing"
                    android:paddingBottom="@dimen/activity_horizontal_spacing"
                    android:textColor="@color/colorDescription"
                    android:text="10"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_horizontal_spacing">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle_detail_release_date"
                    android:textSize="@dimen/detail_subtitle_text_size"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detail_release_date_textview"
                    android:paddingLeft="@dimen/activity_vertical_spacing"
                    android:paddingRight="@dimen/activity_vertical_spacing"
                    android:paddingBottom="@dimen/activity_horizontal_spacing"
                    android:textColor="@color/colorDescription"
                    android:text="29-05-2016"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
